add `/me` endpoint
